2007-09-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Implemented initial support for parsing the correct filetype.
	  Added a list of all the possible fields that MTP can return. Important
	  ones which haven't been implemented will be implemented.
	* src/Files/MusicFile.cs, src/Files/ImageFile.cs: Partially implemented two
	  initial subclasses of File
	* src/Makefile.am: Added two new files to the makefile
	* src/Base/CameraFile.cs: Removed the wrapper for DetectMimetype. Made the
	  MimeType strings const rather than static.

2007-09-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: Freeing the unmanaged array after it has been
	  marshaled to managed code. This was a huge memory leak.

2007-09-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Implemented the new API for the Filesystem
	* libgphoto2-sharp.mdp: Readded the TestGphoto2Sharp.cs file to the solution

2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* Sample/Main.cs: Removed accidently committed testcase for a bug.
	* src/Camera.cs: Also checking to make sure the object hasn't been disposed.

2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Cosmetic changes to the existing file class.
	* src/TestGphoto2Sharp.cs: Removed old file
	* src/FileSystem.cs: Created a wrapper class for the FileSystem/StorageInfo
	  structs. No methods implemented.
	* src/Camera.cs: Created a wrapper class for 'Camera' with a handful of
	  basic methods/properties
	* src/Abilities.cs: Created a wrapper class for CameraAbilities. All camera
	  abilities, file operations and folder operations are exposed as boolean
	  properties.
	* libgphoto2-sharp.mds, Sample, Sample/AssemblyInfo.cs, Sample/Main.cs,
	  Sample/Sample.mdp: Added a sample console application to demonstrate API
	  usage

2007-09-10  Alan McGovern <alan.mcgovern@gmail.com> 
